# Library---py---clovord.py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
src/clovord/: __init__.py  bot.py  errors.py  events.py  gateway.py  http.py  intents.py
src/clovord/gateway/: handler.py
src/clovord/gateway/events/: __init__.py  dispatcher.py  gateway_error.py  message_create.py  presence_update.py  ready.py
src/clovord/models/: message.py  user.py
src/clovord/utils/: logger.py
tests/: test_import.py
tools/: update_changelog.py
